--- a/style.css
+++ b/style.css
@@ -1,19 +1,41 @@
+*{
+    background-color: rgb(103, 112, 71);
+    color:#fff;
+    font-family: "Permanent Marker", cursive;
+}
 .cell{
     width: 75px;
     height: 75px;
-    border: 2px solid;
-    box-shadow: 0 0 0 2px;
+    border: 3px solid #fff;
+    /*box-shadow: 0 0 0 2px;*/
     line-height: 75px;
     font-size: 50px;
     cursor: pointer;
 }
+.cell:hover{
+    background-color: rgb(124,108,119);
+}
 #gameContainer{
     font-family: "Permanent Marker", cursive;
     text-align: center;
+    justify-content: center;
+    align-items:center;
 }
 #cellContainer{
     display: grid;
     grid-template-columns: repeat(3, auto);
+    border-radius:8px;
     width: 225px;
     margin: auto;
+}
+#restartBtn{
+    height: 50px;
+    width: 120px;
+    border: 3px solid #fff;
+    border-radius: 20px;
+    font-size: 24px;
+}
+#restartBtn:hover{
+    transform: translateY(-2px);
+    background-color:rgb(124,108,119);
 }
