--- a/style.css
+++ b/style.css
@@ -1,6 +1,7 @@
 *{
     background-color: rgb(103, 112, 71);
     color:#fff;
+    font-style:normal;
     font-family: "Permanent Marker", cursive;
 }
 .cell{
